Upgrade to JDK 19